--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,161 @@
+*::-webkit-scrollbar {
+  width: 0.5em;
+  height: 0.5em;
+}
+ 
+*::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
+}
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.icon-button{
+  border: 0;
+  padding: 0;
+  background-color: transparent;
+  height: 100%;
+  cursor: pointer;
+  user-select: none;
+  position: relative;
+}
+.icon-button > img{
+  height: 100%;
+}
+.icon-button::before{
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 0%;
+  background-color: rgb(255 255 255 / 25%);
+  transition: height 0.07s;
+  transition-timing-function: ease;
+}
+.icon-button:hover:active::before{
+  height: 100%;
+}
+
+.top-bar{
+  display: flex;
+  position: fixed;
+  background-color: rgb(0 0 0 / 40%);
+  height: 37px;
+  width: -webkit-fill-available;
+  padding: 0.2em;
+  padding-right: 0.6em;
+  justify-content: flex-end;
+  z-index: 2;
+  justify-content: space-between;
+}
+
+a{
+  color: #bd5656;
+}
+
+.main-content{
+  width: 100%;
+  max-width: 570px;
+  padding-top: 44px;
+}
+
+.main-content .post-info{
+  padding: 1em;
+  margin-top: -1.5em;
+  background-color: #1f1f1f;
+  box-shadow: 0 0 6px rgb(0 0 0 / 80%);
+}
+
+.main-content .title{
+  color: rgb(255 255 255);
+  font-size: 2em;
+}
+.main-content .description{
+  font-size: 0.9em;
+  text-align: left;
+  padding: 2em;
+  margin-top: -1em;
+  color: rgb(255 255 255 / 68%);
+}
+
+.footer{
+
+}
+
+.music-menu{
+  user-select: none;
+  transition: top 0.1s;
+  transition-timing-function: ease;
+  position: fixed;
+  padding: 1em;
+  background-color: #333333;
+  width: 100%;
+  z-index: 1;
+  padding-top: 72px;
+  box-shadow: 0 0 20px 0px rgb(0 0 0 / 27%);
+}
+.tracks-list{
+  width: 100%;
+}
+.tracks-list .track{
+  display: inline-block;
+}
+.tracks-list .track .track-embedding{
+
+}
+.tracks-list .track .track-embedding iframe {
+  height: 100%;
+  width: 100%;
+}
+
+.year-circle{
+  position: relative;
+}
+.year-circle-view-date{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  pointer-events: none;
+  user-select: none;
+}
+.year-circle-canvas{
+  
 }
 
-.App-link {
-  color: #61dafb;
+.year-circle-view-date-year{
+  font-size: 30px;
+  color: rgb(255 255 255 / 77%);
+}
+.year-circle-view-date-month{
+  color: rgb(255 255 255 / 77%);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+input, .input{
+  border: 0;
+  background-color: #171717;
+}
+
+/* desktop */
+@media only screen and (min-width: 768px) {
+  .tracks-list .track{
+    display: block;
   }
-  to {
-    transform: rotate(360deg);
+  .music-menu{
+    width: 26vw;
+    right: 0;
   }
 }
