--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background-repeat: repeat;
+  background-size: 360px;
+  background-color: #0d0d0d;
+  color: #fff;
 }
 
 code {
