--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&family=Roboto+Slab:wght@300;400&display=swap');
+
 *::-webkit-scrollbar {
   width: 0.5em;
   height: 0.5em;
@@ -12,7 +14,14 @@
   outline: 1px solid slategrey;
 }
 
+*::selection{
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+}
+
 .App {
+  font-family: 'Roboto Slab';
+  font-weight: 300;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -32,6 +41,18 @@
   height: 100%;
   pointer-events: none;
 }
+.radio{
+
+}
+.radio .radio-button{
+  height: 30px;
+  padding: 0.4em;
+  border-radius: 4px;
+}
+.radio .radio-button.selected{
+  background-color: #2a2a2a;
+}
+
 .icon-button::before{
   content: '';
   position: absolute;
@@ -68,13 +89,15 @@
 }
 
 a{
-  color: #faa978;
+  /* color: #faa978; */
+  color: #fa7878;
 }
 
 .main-content{
   width: 100%;
   max-width: 570px;
   padding-top: 44px;
+  margin-bottom: 222px;
 }
 
 .main-content .post-info{
@@ -83,42 +106,124 @@ a{
   box-shadow: 0 0 6px rgb(0 0 0 / 80%);
 }
 
-.main-content .title{
+.title{
+  background-color: #161616;
+  user-select: text;
+  font-family: 'Roboto Slab';
   color: rgb(255 255 255);
   font-size: 2em;
+  font-weight: 400;
+  padding: 0.3em;
 }
 .main-content .description{
+  font-family: 'Roboto Mono';
   font-size: 0.9em;
   text-align: left;
   padding: 2em;
   color: rgb(255 255 255 / 68%);
   margin-top: 0.4em;
-  padding-top: 0.6em;
+  /* padding-top: 0.6em; */
+  background-color: #161616;
+}
+.main-content .description .pics-container{
+  display: flex;
+  flex-wrap: wrap;
+}
+.main-content .description .picture{
+  width: calc(50% - 2px * 2);
+  margin: 2px;
+}
+.main-content .description .picture > img{
+  width: 100%;
+  border-radius: 2px;
 }
 
 .input.description{
-  white-space: pre;
+  white-space: pre-wrap;
   overflow-x: auto;
+}
+.input.about{
+  white-space: pre-wrap;
 }
 
 .footer{
 
 }
-
-.music-menu{
+.floating-window{
   user-select: none;
   transition: top 0.1s;
   transition-timing-function: ease;
   position: fixed;
-  padding: 1em;
-  background-color: #333333;
   width: 100%;
   z-index: 1;
   padding-top: 72px;
+  display: flex;
+  pointer-events: none;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.music-menu{
+  font-family: 'Roboto Mono';
+  margin-left: 4px;
+  margin-bottom: 4px;
+  position: relative;
+  user-select: none;
+  transition: top 0.1s;
+  transition-timing-function: ease;
+  padding: 1em;
+  background-color: #1f1f1f;
+  width: 100%;
+  z-index: 1;
   box-shadow: 0 0 20px 0px rgb(0 0 0 / 27%);
   max-height: 82vh;
+  pointer-events: all;
+  overflow-y: auto;
+}
+.center-container{
+  position: fixed;
+  transition: opacity 0.1s;
+  transition-timing-function: ease;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0 0 0 / 68%);
+  z-index: 5;
+  cursor: pointer;
   display: flex;
-
+  justify-content: center;
+  align-items: center;
+}
+.about-panel{
+  font-family: 'Roboto Mono';
+  position: fixed;
+  user-select: text;
+  transition: opacity 0.1s;
+  transition-timing-function: ease;
+  padding: 2em;
+  background-color: #1f1f1f;
+  z-index: 1;
+  box-shadow: 0 0 20px 0px rgb(0 0 0 / 27%);
+  max-width: 50%;
+  max-height: 82%;
+  pointer-events: all;
+  z-index: 6;
+  cursor: auto;
+  display: flex;
+  flex-direction: column;
+}
+.about{
+  margin-top: 0.4em;
+  user-select: text;
+  padding: 1em;
+  font-family: 'Roboto Mono';
+  text-align: left;
+  min-width: 10px;
+  color: rgb(255 255 255 / 68%);
+  overflow-y: auto;
+  background-color: #161616;
+}
+.about-title{
+  
 }
 .tracks-list{
   width: 100%;
@@ -128,8 +233,18 @@ a{
   display: inline-block;
   text-align: left;
 }
+.tracks-list .track > .comment{
+  user-select: text;
+  color: rgb(255 255 255 / 30%);
+  background-color: #161616;
+  padding: 0.5em;
+  margin-left: 10px;
+  font-size: 0.8em;
+  margin-bottom: 6px;
+  margin-top: -6px;
+}
 .tracks-list .track .track-embedding{
-
+  
 }
 .tracks-list .track .track-embedding iframe {
   height: 100%;
@@ -137,10 +252,10 @@ a{
 }
 
 .year-circle{
-  margin-top: -1.5em;
   position: relative;
 }
 .year-circle-view-date{
+  font-weight: 400;
   position: absolute;
   width: 100%;
   height: 100%;
@@ -156,10 +271,12 @@ a{
 }
 
 .year-circle-view-date-year{
+  font-weight: 400;
   font-size: 30px;
   color: rgb(255 255 255 / 77%);
 }
 .year-circle-view-date-month{
+  font-weight: 400;
   color: rgb(255 255 255 / 77%);
 }
 
@@ -189,6 +306,15 @@ input, .input{
   display: flex;
   justify-content: space-around;
   margin: 0.6em;
+  align-items: center;
+}
+.row{
+  display: flex;
+  justify-content: space-around;
+}
+.row-element{
+  width: 100%;
+  margin-right: 0.2em;
 }
 
 .buttons-row > button{
@@ -199,18 +325,20 @@ input, .input{
   padding: 0.5em;
 }
 
-.button-row-right{
+.buttons-row-right{
   display: flex;
   height: 30px;
   justify-content: flex-end;
 }
 
-.editable-track-field{
+.editable-track-field {
   text-align: left;
   margin-bottom: 6px;
   padding: 0.5em;
   background-color: transparent;
-  border-bottom: 3px rgb(255 255 255 / 13%) solid;
+  border-bottom: 2px rgb(255 255 255 / 13%) solid;
+  font-size: 0.8em;
+  margin-top: -4px;
 }
 
 .editable-track-field.embedding-code{
@@ -220,12 +348,32 @@ input, .input{
 .tracks-list .track.edit-mode{
   padding: 1em;
   background-color: #2d2d2d;
-  width: calc(100% - 4em);
+  /* width: calc(100% - 4em); */
   margin-bottom: 14px;
 }
 
 .label{
   color: rgb(255 255 255 / 21%);
+}
+
+.sign-in-with-google{
+  user-select: none;
+  cursor: pointer;
+  background-color: #292929;
+  color: #d0d0d0;
+  padding: 0.5em;
+  font-size: 0.8em;
+}
+.signed-in{
+  color: #d0d0d0;
+  font-size: 0.8em;
+}
+
+.last-update{
+  left: 0;
+  bottom: 0;
+  padding: 1.5em;
+  opacity: 0.4;
 }
 
 /* desktop */
@@ -234,7 +382,11 @@ input, .input{
     display: block;
   }
   .music-menu{
+    max-width: 26vw;
     width: 26vw;
     right: 0;
+  }
+  .last-update{
+    position: fixed;
   }
 }
