--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,23 @@
   color: rgb(0, 0, 0);
 }
 
+.rti--container {
+  --rti-bg: #161616 !important;
+  --rti-border: #161616 !important;
+  --rti-main: #161616 !important;
+  --rti-radius: 0.375rem !important;
+  --rti-s: 0.5rem !important;
+  --rti-tag: #edf2f7 !important;
+  --rti-tag-remove: #e53e3e !important;
+  outline: none;
+}
+.rti--input{
+  color: #fff;
+}
+.rti--tag{
+  color: #000;
+}
+
 .App {
   font-family: 'Roboto Slab';
   font-weight: 300;
@@ -28,17 +45,38 @@
   align-items: center;
 }
 
+.global-ui{
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  position: fixed;
+  z-index: 1;
+  align-content: stretch;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+}
+.global-ui-center{
+  display: flex;
+  flex-direction: column;
+  align-content: stretch;
+  align-items: stretch;
+  justify-content: space-between;
+  width: 90%;
+}
+
 .icon-button{
   border: 0;
   padding: 0;
   background-color: transparent;
-  height: 100%;
+  /* height: 100%; */
   cursor: pointer;
   user-select: none;
   position: relative;
+  border-radius: 4px;
 }
 .icon-button > img{
-  height: 100%;
+  max-height: 100%;
+  max-width: 100%;
   pointer-events: none;
 }
 .radio{
@@ -63,15 +101,20 @@
   background-color: rgb(255 255 255 / 25%);
   transition: height 0.07s;
   transition-timing-function: ease;
+  border-radius: 4px;
 }
 .icon-button:hover:active::before{
+  height: 100%;
+}
+.icon-button.active::before{
   height: 100%;
 }
 
 .top-bar{
   display: flex;
-  position: fixed;
-  background-color: rgb(0 0 0 / 40%);
+  /* position: fixed; */
+  /* background-color: rgb(0 0 0 / 40%); */
+  background-color: rgb(13 13 13);
   height: 37px;
   width: -webkit-fill-available;
   padding: 0.2em;
@@ -79,9 +122,10 @@
   justify-content: flex-end;
   z-index: 2;
   justify-content: space-between;
+  pointer-events: all;
 }
 
-.tob-bar .top-bar-item{
+.top-bar .top-bar-item{
   display: flex;
 }
 .top-bar .top-bar-item .icon-button{
@@ -152,13 +196,14 @@ a{
   width: 100%;
   max-width: 570px;
   padding-top: 44px;
-  margin-bottom: 222px;
+  margin-bottom: 1em;
 }
 
 .main-content .post-info{
   padding: 1em;
   background-color: #1f1f1f;
   box-shadow: 0 0 6px rgb(0 0 0 / 80%);
+  border-radius: 4px;
 }
 
 .title{
@@ -177,8 +222,8 @@ a{
   padding: 2em;
   color: rgb(255 255 255 / 68%);
   margin-top: 0.4em;
-  /* padding-top: 0.6em; */
   background-color: #161616;
+  /* padding-top: 0.6em; */
 }
 .main-content .description .pics-container{
   display: flex;
@@ -202,38 +247,40 @@ a{
 }
 
 .footer{
-
+  pointer-events: all;
 }
 .floating-window{
   user-select: none;
   transition: top 0.1s;
   transition-timing-function: ease;
-  position: fixed;
-  width: 100%;
-  z-index: 1;
-  padding-top: 72px;
-  display: flex;
+  /* position: fixed; */
+  /* width: 100%; */
+  /* z-index: 1; */
+  /* padding-top: 72px; */
+  /* display: flex; */
   pointer-events: none;
-  flex-direction: column;
-  align-items: flex-end;
+  /* flex-direction: column;
+  align-items: flex-end; */
+  /* width: 90%; */
 }
 
 .music-menu{
   font-family: 'Roboto Mono';
-  margin-left: 4px;
-  margin-bottom: 4px;
+  /* margin-left: 4px; */
+  /* margin-bottom: 4px; */
   position: relative;
   user-select: none;
   transition: top 0.1s;
   transition-timing-function: ease;
   padding: 1em;
   background-color: #1f1f1f;
-  width: 100%;
   z-index: 1;
   box-shadow: 0 0 20px 0px rgb(0 0 0 / 27%);
-  max-height: 82vh;
+  /* height: 100%; */
   pointer-events: all;
   overflow-y: auto;
+  display: flex;
+  flex-direction: column;
 }
 .center-container{
   position: fixed;
@@ -258,7 +305,7 @@ a{
   background-color: #1f1f1f;
   z-index: 1;
   box-shadow: 0 0 20px 0px rgb(0 0 0 / 27%);
-  max-width: 50%;
+  max-width: 80%;
   max-height: 82%;
   pointer-events: all;
   z-index: 6;
@@ -267,6 +314,7 @@ a{
   flex-direction: column;
 }
 .about{
+  pointer-events: all;
   margin-top: 0.4em;
   user-select: text;
   padding: 1em;
@@ -285,8 +333,11 @@ a{
   overflow-y: auto;
 }
 .tracks-list .track{
-  display: inline-block;
+  /* display: inline-block; */
   text-align: left;
+  background-color: #161616;
+  margin-bottom: 4px;
+  border-radius: 4px;
 }
 .tracks-list .track > .comment{
   user-select: text;
@@ -339,6 +390,7 @@ input, .input{
   border: 0;
   background-color: #171717;
   outline: none;
+  border-radius: 4px;
 }
 
 .slider{
@@ -349,6 +401,7 @@ input, .input{
   border: 2px rgb(255 255 255 / 11%) dashed;
   user-select: none;
   cursor: e-resize;
+  border-radius: 4px;
 }
 .slider > img{
   height: 100%;
@@ -431,6 +484,116 @@ input, .input{
   opacity: 0.4;
 }
 
+.scnd{
+  opacity: 0.5;
+}
+
+/* projects */
+.edit-projects-container{
+
+}
+.edit-projects-title{
+  font-weight: bold;
+  font-size: 1.2em;
+}
+.project-item{
+  display: grid;
+  grid-template-columns: 5em auto;
+  background-color: #1f1f1f;
+  padding: 1em;
+  border-radius: 4px;
+  margin-bottom: 8px;
+  grid-gap: 1em;
+}
+.project-item .input {
+  padding: 0.5em;
+}
+.project-item > .fields {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  text-align: left;
+}
+.project-item-date{
+  opacity: 0.3;
+  font-size: 0.8em;
+}
+.project-image{
+  object-fit: cover;
+  width: 100%;
+  aspect-ratio: 1 / 1;
+  border-radius: 12px;
+}
+.project-image-input{
+  word-break: break-word;
+}
+.project-title{
+  font-size: 1.2em;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.project-title > .icon-button{
+  width: 20px;
+}
+.project-description{
+  opacity: 0.6;
+}
+.project-description-reveal{
+  font-size: 0.8em;
+  opacity: 0.3;
+  padding-left: 1em;
+}
+.project-tags-container{
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 7px;
+}
+.project-tag{
+  transition: background-color 0.1s, color 0.1s;
+  transition-timing-function: ease;
+
+  background-color: #414141;
+  padding: 4px;
+  border-radius: 4px;
+  margin-right: 4px;
+  margin-bottom: 4px;
+  font-size: 0.8em;
+  cursor: pointer;
+}
+.project-tag:hover{
+  background-color: #525252;
+}
+.project-tag:active{
+  background-color: #ffffff;
+  color: #000;
+}
+.edit-projects{
+  
+}
+.projects-menu{
+  pointer-events: all
+}
+.projects-menu-grid{
+  display: grid;
+  grid-template-rows: auto 1fr;
+}
+.projects-list{
+  margin-top: 8px;
+  overflow-y: auto;
+}
+.projects-search{
+  background-color: #1f1f1f;
+  padding: 0.5em;
+  border-radius: 4px;
+  text-align: left;
+}
+.projects-search-label{
+  padding: 5px;
+  opacity: 0.6;
+}
+
 /* desktop */
 @media only screen and (min-width: 768px) {
   .tracks-list .track{
@@ -443,5 +606,22 @@ input, .input{
   }
   .last-update{
     position: fixed;
+  }
+  .main-content{
+    margin-bottom: 222px;
+  }
+  .global-ui-center{
+    display: flex;
+    flex-direction: row;
+    align-content: stretch;
+    align-items: stretch;
+    justify-content: space-between;
+    width: 100%;
+  }
+  .floating-window{
+    width: 28%;
+  }
+  .about-panel{
+    max-width: 50%;
   }
 }
